# tamipami

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  app.py  cli.py  compose.yaml  conda-requirements.txt  config.py  config.yaml  degenerate.py  fastq.py  ht-pamda.docx  main.py  output.txt  pam.py  pip-requirements.txt  pyproject.toml  readme.md  requirements.txt  scoring.R  sim_data.py  sim_dataframe.csv
.github/workflows/: ghcr.yml
benchmark/: benchmark_app_chrome.py  benchmark_results.csv  benchmark_results_v014.csv  benchmark_results_v034.csv  chrome_app_benchmark.html  chrome_app_benchmark_v014.html  chrome_app_benchmark_v034.html  chrome_app_experiment_summary.csv  chrome_app_results.csv  chrome_app_results_v014.csv  chrome_app_results_v034.csv  chrome_benchmark_summary.r  cli_benchmark.html  cli_benchmark_summary.r  cli_benchmark_v014.html  cli_benchmark_v034.html  readme.md  run_benchmark.py
data/: readme.md
data/metadata/: Model.organism.animal.1.0.xlsx  SRA-metadata-15476171-processed-ok.xlsx  SRA_metadata.xlsx  experiment_test.csv  experiments.csv  experiments.xlsx  ~$experiments.xlsx
docker-images/: Dockerfile
tamipami/: __init__.py  app.py  cli.py  cli_utils.py  config.py  degenerate.py  entropy.py  fastq.py  pam.py  tpio.py
tamipami/assets/: config.yaml
tests/: unit_tests.py
tests/fastq/: test_count_pam.py  test_iterate_kmer.py  test_merge_reads.py  test_merge_reads_stream.py  test_pam_stream.py
tests/tpio/: test_export_hdf.py  test_histogram_plot.py  test_import_hdf.py  test_store_stdin_binary_to_tempfile.py
