[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "tamipami"
dynamic = ["version"]

description = "Software to identify the PAM or TAM sites from high-throughput cleavage screening experiments"
authors = [
    {name = "Adam R. Rivers", email =  "adam.rivers@usda.gov"},]
maintainers = [
    {name = "Adam R. Rivers", email =  "adam.rivers@usda.gov"},]
license = {file = "LICENSE.txt"}
readme = "README.md"
keywords = ["CRISPR","Cas"]
requires-python = ">=3.10"

dependencies = [
    "biopython",
    "ortools",
    "scipy",
    "pandas",
    "ckmeans",
    "matplotlib",
    "scikit-bio",
    "logomaker",
    "altair",
    "pyyaml",
    "streamlit",
    "tables"
    ]

[external]
  dependencies = [
    "pkg:sourceforge:BBMap@39.52"
  ]

[project.urls]
repository = "http://github.com/usda-ars-gbru/tamipami"


[tool.setuptools_scm]
write_to = "tamipami/_version.py"
tag_regex = '^v(?P<version>.*)$'

[tool.setuptools]
packages = ['tamipami']

[project.scripts]
tamipami = "tamipami.cli:main"